rtspclientsink: Wait until OPEN has been scheduled

Make sure that the sink thread has started opening connection
to the server before continuing.

https://bugzilla.gnome.org/show_bug.cgi?id=790412